[package]
name = "oggify"
version = "0.1.0"
authors = ["Lorenzo Pistone <blaffablaffa@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Download Spotify tracks to Ogg Vorbis format with a Premium account"
keywords = ["spotify"]
repository = "https://github.com/pisto/oggify"
readme = "README.md"

[dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
librespot-core = { git = "https://github.com/librespot-org/librespot.git", branch = "dev" }
librespot-metadata = { git = "https://github.com/librespot-org/librespot.git", branch = "dev" }
librespot-audio = { git = "https://github.com/librespot-org/librespot.git", branch = "dev" }
regex = "1.1.0"
log = "0.4.6"
env_logger = "0.9.3"
scoped_threadpool = "0.1.9"
id3 = "1.3.0"
http = "0.2.8"
hyper = "0.14"